# Kemono-games2FGI-YAML-Tool

./: README.md  pyproject.toml
kemono_games2fgi_yaml_tool/: __init__.py  __main__.py  assets_convert.py  base_path.py  converter.py  exception.py  games_convert.py  scanner.py
kemono_games2fgi_yaml_tool/utils/: setting.py  spider.py  yaml_tool.py
tests/: __init__.py
